[tool.poetry]
name = "repl-nix-podassistai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
speechrecognition = "^3.10.4"
nltk = "^3.9.1"
openai = "^1.44.0"
textblob = "^0.18.0.post0"
torch = "^2.4.1"
transformers = "^4.44.2"
scikit-learn = "^1.5.1"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
